--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -1,13 +1,63 @@
-.title{
+.title-navbar{
     display: flex;
     flex-direction: column;
     padding: 15px;
 }
 
-.title h1{
+.title-navbar h1{
     font-size: 2em;
 }
 
-.title h2{
+.title-navbar h2{
     font-size: 2em;
+}
+
+/* home section*/
+
+.title-home h1,
+.title-home h2{
+    position: relative; 
+    left: 35%; 
+    font-size: 130px;
+    color: white;
+    text-align: left;
+    z-index: 2; 
+}
+
+/* home main */
+
+.title-main h1{
+    font-weight: normal;
+    color: #333333;
+    font-size: 45px;
+}
+.title-main h2{
+    color: #0093C9;
+    font-size: 40px;
+}
+
+/* home section */
+
+.title-section{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.title-section h1{
+    font-weight: normal;
+    color: #333333;
+    font-size: 45px;
+}
+.title-section h2{
+    color: #0093C9;
+    font-size: 45px;
+}
+
+/* ArticleComponent */
+
+.title-article h1{
+    font-weight: 300;
+    color: #333333;
+    font-size: 28px;
 }
