--- a/src/containers/HomeContainer/HomeContainer.css
+++ b/src/containers/HomeContainer/HomeContainer.css
@@ -1,4 +1,7 @@
+/* Asegúrate de que la imagen se posicione correctamente */
+
 .section-container__home {
+    display: flex;
     position: relative;
     width: 100%;
     min-height: 100vh;
@@ -7,37 +10,164 @@
     background-size: cover;
     padding: 0;
     overflow: hidden;
-}
-
-.section-container::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgb(10, 7, 7) 100%);
-    pointer-events: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .section-container__home-main {
-    position: relative;
-    max-width: 1200px;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
-    z-index: 0; 
+    width: 100%;
+    height: 100%; 
+    background-color: rgb(198, 195, 184);
+    position: relative;
 }
 
-.title-home {
-    font-size: 60px;
-    color: black; 
-    text-align: center;
-    z-index: 1; 
-    position: relative; 
+.section-container__home-samba {
+    position: absolute;
+    bottom: 2;
+    right: 0;
+    max-width: 50%; 
+    height: auto;
+    z-index: 3; 
+
 }
+
+/*  MAIN */
+
+
+/* article 1 */
+
+.container-main__home {
+    max-width: 1200px;
+    width: 100%;  
+    display: flex;
+    margin-top: 20px;
+    margin-top: 130px;
+    justify-content: space-between;
+}
+
+.container-main__article{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 0;
+}
+
+.container-main__home img{
+    height: 587px;
+    width: 563px;
+    margin-right: 40px
+}
+
+.container-main__parraf{
+    font-size: large;
+    color: #4b4b4b;
+    max-width: 500px;
+}
+
+/* article 2 */
+
+.container-main__two{
+    margin-top: 170px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+}
+
+.container-main__parraf-two{
+    font-size: large;
+    color: #4b4b4b;
+    max-width: 900px;
+    text-align: left;
+
+}
+
+.container-main__two-images{
+    display: flex;
+    gap: 30px;
+}
+
+.container-main__two-images img {
+    transition: transform 0.3s ease;
+}
+
+.container-main__two-images img:hover {
+    transform: scale(1.1); 
+}
+
+/* section 3 */
+
+.container-main__tree{
+    display: flex;
+    width: 1200px;
+    justify-content: space-around;
+    margin: 140px 40px 40px 0;
+}
+
+.container-main__tree div{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.container-main__tree img{
+    height: 487px;
+    width: 563px;
+} 
+
+/* section 4 */
+
+.container-main__four{
+    width: 1200px;
+    display: flex;
+    margin: 140px 40px 40px 0;
+    justify-content: space-around;
+}
+
+.container-main__four div{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 400px;
+}
+
+.container-main__four img{
+    height: 587px;
+    width: 563px;
+}
+
+/* section footer */
+
+.container-main__footer{
+    width: 1200px;
+    display: flex;
+    margin: 120px 40px 40px 0;
+    flex-direction: column;
+}
+
+.container-main__footer div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.footer-sucursales{
+    display: flex;
+    gap: 25px;
+}
+
+
 
