--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -55,5 +55,7 @@ gap: 10px;
 
 .card-item__footer{
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
 }
