--- a/src/index.css
+++ b/src/index.css
@@ -19,4 +19,4 @@
 @import './components/Slider/Slider.css';
 @import './components/ItemDetail/ItemDetail.css';
 @import './components/IconPresent/IconPresent.css';
-@import './components/ArticleComponent/ArticleComponent.css' 
+@import './components/ArticleComponent/ArticleComponent.css';
