--- a/src/components/IconPresent/IconPresent.css
+++ b/src/components/IconPresent/IconPresent.css
@@ -10,3 +10,16 @@
     border-radius: 10px;
 }
 
+/*  icon present footer */
+
+.icon-present-footer{
+    display: block;
+    background-color: #c9008d60;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 0;
+    width: fit-content;
+    border-radius: 10px;
+}
