--- a/src/containers/ItemListContainer/ItemListContainer.css
+++ b/src/containers/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,7 @@
 .section-container {
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     background-image: url('../../assets/background-main.svg');
     background-repeat: no-repeat;
     background-position: center center;
@@ -10,7 +10,6 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    overflow: hidden;
 }
 
 .section-container::after {
@@ -29,5 +28,5 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    height: 100vh;
+    height: 100%;
 }
