--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -3,7 +3,7 @@
         transform: scale(1);
     }
     50% {
-        transform: scale(1.1);
+        transform: scale(1.1); 
     }
     100% {
         transform: scale(1);
@@ -11,29 +11,28 @@
 }
 
 .slider {
-    position: absolute;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
-    z-index: 0;
+    overflow: hidden; 
+    position: absolute;
+    z-index: 1;
 }
 
 .slide {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    opacity: 0;
+    top: 0;
+    left: 0;
+    opacity: 0; 
     transition: opacity 1s ease-in-out;
-    animation: zoomInOut 6s ease-in-out;
-    animation-iteration-count: infinite;
+    animation: zoomInOut 6s ease-in-out infinite;
+    overflow: hidden;
+    object-fit: cover;
 }
 
 .slide.active {
-    opacity: 1;
+    opacity: 1; 
 }
-
 
 
