--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -1,8 +1,13 @@
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0;
 }
 
-body{
-    background-color: #C6C3B8;
-}
+    body{
+        height: 100%;
+        background-image: url('../assets/background-main.svg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
