--- a/src/components/Accordion/Accordion.css
+++ b/src/components/Accordion/Accordion.css
@@ -64,12 +64,14 @@
     transition: background-color 0.3s ease, transform 0.3s ease;
     border-radius: 10px;
     background: transparent;
-    font-size: 1em; 
+    font-family:    system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ; 
+    color: #210107;
+    font-weight: 600;
 }
 
 .accordion-list-item:hover {
     background-color: black;
-    color: white;
+    color: wheat;
     transform: scale(1.02);
     transition: color 0.3s ease, background-color 0.3s ease;
     cursor: pointer;
