--- a/src/components/IconPresent/IconPresent.css
+++ b/src/components/IconPresent/IconPresent.css
@@ -31,13 +31,14 @@
     background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    color: black;
+    color:white;
     justify-content: center;
     align-items: center;
     padding: 10px;
-    margin: 0;
+    margin: 0 auto;
     width: fit-content;
     border-radius: 10px;
     font-size: 40px;
     font-style: italic;
+
 }
