--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -20,9 +20,8 @@
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     color: rgba(255, 255, 255, 1);
     gap: 10px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+    padding: 16px;
+    justify-content: center;
 }
 
 .card-white__detail-item{
