--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url('../../assets/background-main.svg');
+    background-image: url('../../public/assets/background-main.svg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
