--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -6,7 +6,7 @@
 
     body{
         height: 100%;
-        background-image: url('../assets/background-main.svg');
+        background-image: url('/assets/background-main.svg');
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
